BAP-22004: API for emailcontext entities (#35733)
