# src/Oro/Bundle/EmailBundle/Resources/config/oro/api.yml
@@ -1,4 +1,15 @@
 api:
+    entity_aliases:
+        Oro\Bundle\EmailBundle\Api\Model\EmailContextEntity:
+            alias: emailcontextentity
+            plural_alias: emailcontextentities
+        Oro\Bundle\EmailBundle\Api\Model\EmailContextSearchItem:
+            alias: emailcontextsearch
+            plural_alias: emailcontextsearch
+        Oro\Bundle\EmailBundle\Api\Model\EmailContextItem:
+            alias: emailcontext
+            plural_alias: emailcontext
+
     entities:
 #        Oro\Bundle\EmailBundle\Entity\EmailTemplate: ~
 #        Oro\Bundle\EmailBundle\Entity\AutoResponseRule: ~
@@ -22,18 +33,152 @@ api:
             subresources:
                 recipients:
                     exclude: true
-                suggestions:
-                    target_class: Oro\Bundle\ApiBundle\Model\EntityIdentifier
-                    target_type: collection
-                    actions:
-                        get_relationship: false
-                        update_relationship: false
-                        add_relationship: false
-                        delete_relationship: false
-                    filters:
-                        fields:
-                            exclude-current-user:
-                                data_type: boolean
+
+        Oro\Bundle\EmailBundle\Api\Model\EmailContextEntity:
+            documentation_resource: '@OroEmailBundle/Resources/doc/api/email_context_entity.md'
+            disable_meta_properties: true
+            disable_fieldset: true
+            identifier_field_names: [id]
+            fields:
+                id:
+                    data_type: string
+                entityType:
+                    data_type: string
+                entityName:
+                    data_type: string
+                allowed:
+                    data_type: bool
+            filters:
+                fields:
+                    allowed:
+                        data_type: boolean
+                        operators: [ '=' ]
+                        property_path: _
+            actions:
+                get_list:
+                    page_size: -1 # disable paging
+                    disable_sorting: true
+                get: false
+                create: false
+                update: false
+                delete: false
+                delete_list: false
+
+        Oro\Bundle\EmailBundle\Api\Model\EmailContextSearchItem:
+            documentation_resource: '@OroEmailBundle/Resources/doc/api/email_context_search.md'
+            identifier_field_names: [id]
+            disable_meta_properties: true
+            fields:
+                id:
+                    data_type: string
+                entityName:
+                    data_type: string
+                entity:
+                    data_type: nestedAssociation
+                    fields:
+                        __class__:
+                            property_path: entityClass
+                        id:
+                            property_path: entityId
+                entityClass:
+                    data_type: string
+                entityId:
+                    data_type: string
+                entityUrl:
+                    data_type: string
+            filters:
+                fields:
+                    entities:
+                        data_type: string
+                        allow_array: true
+                        operators: [ '=' ]
+                        property_path: _
+                    searchText:
+                        data_type: string
+                        operators: [ '=' ]
+                        property_path: _
+            actions:
+                get_list:
+                    disable_sorting: true
+                get: false
+                create: false
+                update: false
+                delete: false
+                delete_list: false
+                get_subresource: false
+                get_relationship: false
+
+        Oro\Bundle\EmailBundle\Api\Model\EmailContextItem:
+            documentation_resource: '@OroEmailBundle/Resources/doc/api/email_context.md'
+            identifier_field_names: [id]
+            disable_meta_properties: true
+            fields:
+                id:
+                    data_type: string
+                entityName:
+                    data_type: string
+                entity:
+                    data_type: nestedAssociation
+                    fields:
+                        __class__:
+                            property_path: entityClass
+                        id:
+                            property_path: entityId
+                entityClass:
+                    data_type: string
+                entityId:
+                    data_type: string
+                entityUrl:
+                    data_type: string
+                isContext:
+                    data_type: boolean
+            filters:
+                fields:
+                    entities:
+                        data_type: string
+                        allow_array: true
+                        operators: [ '=' ]
+                        property_path: _
+                    searchText:
+                        data_type: string
+                        operators: [ '=' ]
+                        property_path: _
+                    messageId:
+                        data_type: string
+                        operators: [ '=' ]
+                        property_path: _
+                    from:
+                        data_type: string
+                        operators: [ '=' ]
+                        property_path: _
+                    to:
+                        data_type: string
+                        allow_array: true
+                        operators: [ '=' ]
+                        property_path: _
+                    cc:
+                        data_type: string
+                        allow_array: true
+                        operators: [ '=' ]
+                        property_path: _
+                    isContext:
+                        data_type: boolean
+                        operators: [ '=' ]
+                        property_path: _
+                    excludeCurrentUser:
+                        data_type: boolean
+                        operators: [ '=' ]
+                        property_path: _
+            actions:
+                get_list:
+                    disable_sorting: true
+                get: false
+                create: false
+                update: false
+                delete: false
+                delete_list: false
+                get_subresource: false
+                get_relationship: false
 
 #        Oro\Bundle\EmailBundle\Entity\EmailAttachment: ~
 #        Oro\Bundle\EmailBundle\Entity\EmailAttachmentContent: ~
